[tool]
[project]
name = "fast_dash"
version = "0.2.13"
homepage = "https://github.com/dkedar7/fast_dash"
documentation = "https://docs.fastdash.app"
description = "Turn your Python functions into interactive web applications. Fast Dash is an innovative way to build and deploy your Python code as interactive apps with minimal changes to your original code."
keywords = ["webdevelopment", "python", "machine-learning", "data-science", "data-visualization", "dash"]
authors = [
    {name = "Kedar Dabhadkar", email = "<kedar@fastdash.app>"}
    ]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13'
]

requires-python = ">=3.9,<3.14"

packages = [
    { include = "fast_dash" },
    { include = "tests", format = "sdist" },
]

dependencies = [
    "dash>=2.11.0",
    "pandas>=1.0.0",
    "dash-bootstrap-components>=2.0.0",
    "dash-mantine-components>=1.0.0",
    "dash-iconify>=0.1.2",
    "Pillow>=9.2.0",
    "matplotlib>=3.5.0",
    "docstring-parser>=0.15",
    "dill (>=0.3.9,<0.4.0)",
    "pyreadline3 (>=3.5.4,<4.0.0)",
    "dash-socketio (>=1.1.1,<2.0.0)",
    "flask-socketio (>=5.5.1,<6.0.0)",
]

[project.optional-dependencies]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "selenium"
    ]

dev = ["tox", "pre-commit", "virtualenv", "twine", "toml"]

doc = [
    "mkdocs",
    "livereload",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings-python",
    "griffe",
    "mkdocs-autorefs",
    "mkdocs-jupyter"
    ]


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
isort = "^5.10.1"
flake8-docstrings = "^1.6.0"
pytest-cov = "^3.0.0"
tox = "^3.25.1"
pre-commit = "^2.20.0"
virtualenv = "^20.16.3"
twine = "*"
toml = "^0.10.2"
mkdocs = "^1.3.1"
livereload = "^2.6.3"
mkdocs-include-markdown-plugin = "^3.6.1"
mkdocs-material = "9.1.18"
mkdocs-autorefs = "^0.4.1"
mkdocstrings-python = "^0.7.1"
mkdocs-jupyter = "^0.24.1"
griffe = "<0.31.0"
docutils = ">0.21"

[tool.poetry.group.test.dependencies]
urllib3 = "*"
dash = {version = ">2.11.0", extras = ["testing"]}
selenium = ">=3.141.0,<=4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.scripts]
fastdash = "fast_dash.cli:main"